webapps/test/v1/WEB-INF/jsp/error/ajax_warning.jsp
<div class="error-container" style="margin:3em;">
	<div class="alert alert-warning alert-dismissible" role="alert">
		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
			<span aria-hidden="true">&times;</span>
		</button>
		<strong>${error_status} ${error_title}</strong>
		${error_message}
	</div>
</div>